# Pixel-Groove

./: ARCHITECTURE.md  STRATEGY.md  pyproject.toml
backend/: .env.example  .gitignore  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/src/: di.py
backend/src/application/dto/: experiment_mappers.py  experiment_requests.py  experiment_responses.py  mappers.py  requests.py  responses.py
backend/src/application/use_cases/: _helpers.py  batch_execution_operations.py  edge_operations.py  execution_operations.py  experiment_operations.py  graph_operations.py  node_operations.py
backend/src/core/: config.py  exceptions.py  logging_config.py
backend/src/core/utils/: audio_utils.py  id_generator.py
backend/src/domain/: ports.py
backend/src/domain/models/: batch_execution.py  execution.py  experiment.py  graph.py  media.py  ports.py
backend/src/domain/services/: batch_scheduler.py  experiment_service.py  graph_executor.py  graph_utils.py  input_resolver.py  node_executor.py  node_handlers.py
backend/src/infrastructure/: gemini_client.py  json_experiment_repository.py  json_repository.py  local_storage.py  memory_cache.py  prompt_enrichment.py  static_memory.py
backend/src/presentation/: sse.py
backend/src/presentation/middleware/: error_handler.py
backend/src/presentation/routes/: batch_execution.py  execution.py  experiments.py  graphs.py  nodes.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: batchExecution.ts  client.ts  edges.ts  execution.ts  graphs.ts  (+3 more)
(+51 files in other folders)
